# agent-orchestrator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py
app/api/: generalknowledge.py  getdatetime.py  getweather.py  orchestrator.py  routes.py
app/routes/: agents.py  chat.py  say.py
app/static/css/: style.css
app/templates/: base.html  index.html
app/templates/partials/: bot_message.html  error.html  messages.html
app/utilities/: say.py
