[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "pydantic>=2.12.5",
    "pyttsx3",
    "duckduckgo-search>=6.0.0",
    "flask>=3.1.2",
    "flask-htmx>=0.4.0",
    "markupsafe>=3.0.3",
    "ddgs>=9.10.0",
    "langchain-classic>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "numba>=0.63.1",
    "unstructured>=0.18.31",
    "markdown>=3.10.1",
    "chromadb>=1.4.1",
    "flask-api>=3.1",
    "flask-restful>=0.3.10",
]
